Cherry-pick 260362@main (e3f0ed64c816). https://bugs.webkit.org/show_bug.cgi?id=252270

[GStreamer] Unresponsive web process when playing HLS video, hang when calling gst_pad_set_active?
    https://bugs.webkit.org/show_bug.cgi?id=252270

    Reviewed by Xabier Rodriguez-Calvar.

    Prevent decodebin(3) from auto-plugging hlsdemux if it was disabled. UAs should be able to fallback
    to MSE when this happens.

    * Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
    (WebCore::registerWebKitGStreamerElements):

    Canonical link: https://commits.webkit.org/260362@main